# testwork

./: .gitignore
C++/D_LIB/: MsgShardD.lib  MsgShardLibD.lib  My_CommnonD.lib
C++/MsgShard/: MessageC2G.pb.cc  MessageC2G.pb.h  MessageC2G.proto  MessageC2Gate.pb.cc  MessageC2Gate.pb.h  MessageC2Gate.proto  MessageC2S.pb.cc  MessageC2S.pb.h  MessageFarmC2G.proto  MessageFarmC2S.pb.cc  MessageFarmC2S.pb.h  MessageFarmG2C.pb.cc  MessageFarmG2C.pb.h  MessageG2C.pb.cc  MessageG2C.pb.h  MessageG2C.proto  MessageGS2C.pb.cc  MessageGS2C.pb.h  MessageGS2Gate.pb.cc  MessageGS2Gate.pb.h  MessageGate2GS.pb.cc  MessageGate2GS.pb.h  MessageGate2GS.proto  MessageGate2LG.pb.cc  MessageGate2LG.pb.h  MessageGate2LG.proto  MessageLG2Gate.pb.cc  MessageLG2Gate.pb.h  MessageLG2Gate.proto  MessageTechnologyC2S.pb.cc  MessageTechnologyC2S.pb.h  MessageTechnologyG2C.pb.cc  MessageTechnologyG2C.pb.h  MsgHead.pb.cc  MsgHead.pb.h  MsgHead.proto  SDBase2008'.sln  SDBase2008'.vcxproj  SDBase2008'.vcxproj.filters  (+3 more)
C++/server/DBServer/: AccountMgr.cpp  AccountMgr.h  Config.cpp  Config.h  DBServer.cbp  DBServer.cpp  DBServer.depend  DBServer.layout  DBServer.vcproj  DBServer.vcxproj  DBServer.vcxproj.filters  DataInterface.cpp  DataInterface.h  Makefile  Makefile.am  Makefile.in  ReadMe.txt  Server.cpp  Server.h  WorldInfo.cpp  WorldInfo.h  configure  configure.in  stdafx.cpp  stdafx.h
C++/server/DBServer/Net/: GSBuilder.cpp  GSBuilder.h  GSListenSocket.cpp  GSListenSocket.h  GSParser.cpp  GSParser.h  GSSocket.cpp  GSSocket.h  GTBuilder.cpp  GTBuilder.h  GTListenSocket.cpp  GTListenSocket.h  GTParser.cpp  GTParser.h  GTSocket.cpp  GTSocket.h
C++/server/DBServer/res/: DBServer.manifest  DBServer.rc2
C++/server/GateServer/: Config.cpp  Config.h  GateServer.cbp  GateServer.cpp  GateServer.depend  GateServer.layout  GateServer.sln  GateServer.sln.old  GateServer.suo.old  GateServer.vcproj  GateServer.vcxproj  GateServer.vcxproj.filters  GateUserManager.cpp  GateUserManager.h  Makefile.am  MessageC2Gate.pb.cc  MessageC2Gate.pb.h  ReadMe.txt  Server.cpp  Server.h  UserManager.cpp  UserManager.h  configure.in  stdafx.cpp  stdafx.h
C++/server/GateServer/GameLogic/: GateUserManager.cpp  GateUserManager.h
C++/server/GateServer/Net/: CListenSocket.cpp  CListenSocket.h  CParser.cpp  CParser.h  CSSocket.cpp  CSSocket.h  CSocket.cpp  CSocket.h  GSSocket.cpp  GSSocket.h
C++/server/GateServer/ProtoNet/: CListenProtoSocket.cpp  CListenProtoSocket.h  CProtoSocket.cpp  CProtoSocket.h  GProtoSocket.cpp  GProtoSocket.h  GSMessageParser.cpp  GSMessageParser.h  GameServerSocket.cpp  GameServerSocket.h  GateParser.cpp  GateParser.h  LG2GateParser.cpp  LG2GateParser.h  LoginSocket.cpp  LoginSocket.h  ProtoServer.cpp  ProtoServer.h
C++/server/GateServer/res/: GateServer.manifest
UnitySocketClient3/: 福人SVN账号.txt
(+516 files in other folders)
